# orchestrai

./: .gitignore  pyproject.toml
examples/: codebase_expert_demo.py  composite_memory_conversation.py  memory_real.py  memory_real_verbose.py  summarizing_memory_real.py  vector_memory_real.py
src/orchestrai/memory/: core.py
src/orchestrai/memory/adapters/: openai_adapter.py
src/orchestrai/memory/stores/: composite_memory.py  key_value_store.py  rolling_buffer.py  summarizing_memory.py  vector_memory.py
tests/: test_key_value_store.py  test_memory.py  test_openai_adapter.py  test_stores.py  test_summarizing_memory.py
